--- a/project10.css
+++ b/project10.css
@@ -45,11 +45,65 @@ h1 {
   font-family: sans-serif;
 }
 
-.container textarea {
+textarea {
   padding: 10px;
   display: flex;
   justify-content: center;
   background-color: #1c2833;
   border-radius: 10px;
   border: none;
+}
+
+.options {
+  display: flex;
+  justify-content: space-between;
+
+  color: white;
+  align-items: center;
+  cursor: pointer;
+  gap: 2px;
+}
+
+.right-paragraph {
+  display: flex;
+  margin-left: 170px;
+  align-items: center;
+  text-align: center;
+  color: white;
+}
+
+.containers {
+  display: flex;
+  justify-content: space-between;
+}
+
+.container1,
+.container2,
+.container3 {
+  width: 180px;
+  height: 80px;
+  border-radius: 8px;
+  padding: 20px;
+  font-family: sans-serif;
+  font-size: 2rem;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+}
+
+span {
+  font-size: small;
+  font-weight: 100;
+}
+
+.container1 {
+  background-color: skyblue;
+}
+
+.container2 {
+  background-color: orange;
+}
+
+.container3 {
+  background-color: peru;
 }
